# air_quality_bluetooth_le

./: .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  Makefile  Pipfile  README.md  README.rst  cli.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
aqi_ble/: __init__.py  ble.py  cli.py  main.py  manager.py  sensor.py  sheets.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
sds011/: LICENSE  README.md
sds011/Documentation/: Readme.txt  Serial Protokoll.txt
tests/: test_aqi_ble.py
